--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
+{% block javascript %}
+    <script type="text/javascript" src="{% static 'js/example.js' %}"></script>
+{% endblock javascript %}
 
 {% block body %}
     {{ test }}
