--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
+
     <meta charset="UTF-8">
-    <title></title>
+    <title>Calendar Facebook</title>
     {% block css %}
     {% endblock css %}
     {% block javascript %}
