--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -37,7 +37,7 @@
         </button>
 
         <p class="facebook__status">
-            Status: <span class="facebook__status-response"></span>
+            Status: <span class="facebook__status-response">UNKNOWN</span>
         </p>
 
         <div data-provide="calendar"></div>
