--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -27,6 +27,7 @@
 {% block body %}
     <div class="container text-center">
         <h1 class="header__title">Facebook Calendar</h1>
+        <h3 class="header__welcome">Witaj <span class="header__name">Oskar Masłek</span>!</h3>
         <fb:login-button 
             scope="public_profile,email"
             onlogin="checkLoginState();">
